travis.yml repair

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ install:
   - pushd check-0.11.0 && ./configure --prefix=/usr && make && sudo make install && popd
 
 before_script:  
-  - cmake
+  - cmake .
 
 script: 
-  - make 
+  - make
   - make test
   - lcov --directory . --capture --output-file coverage.info
 
