--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install lcov
+  - sudo apt-get install lsubunit
 
 install:
   - wget https://github.com/libcheck/check/releases/download/0.11.0/check-0.11.0.tar.gz
